@@ -1,3 +1,8 @@
+2021-02-26  Allen D. Ball  <ball@hcf.dev>
+
+	* Added Magic.isComplete(String,String) interface method and
+	implemented for Java Magic.
+
 2021-02-25  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/install/Install.java:
